--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
   <h1>{{titulo}}</h1>
- <!-- <apli-detalle [apli]="apli"></apli-detalle>-->
+ <apli-detalle [apli]="apli"></apli-detalle>
   
 <div>
   <ul class="aplis">
@@ -9,5 +9,6 @@
     (click)="seleccionar(apliItem)">
       <span class="insignia">{{apliItem.id}}</span> {{apliItem.nombre}}
     </li>
-  </ul>
+  </ul> 
 </div>
+
