--- a/src/app/apli-detalle.component.html
+++ b/src/app/apli-detalle.component.html
@@ -3,3 +3,8 @@
     <label>nombre: </label>
     <input [(ngModel)]="apli.nombre" placeholder="nombre de la apli">
 </div>
+<style>
+    div{
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+</style>
