--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 .selected{
     background-color: #CFD8DC !important;
     color: white;
@@ -17,6 +21,7 @@
     padding: .3em 0;
     height: 1.6em;
     border-radius: 4px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     /*list-style: none;
     width: 150px;
     display: inline;*/
@@ -48,4 +53,17 @@
     height: 1.8em;
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
+}
+
+h1{
+    background-color: rgb(15, 15, 15);
+    height: 70px;;
+    margin-top: -8px;
+    text-align: center;
+    padding-top: 20px;
+    color: rgb(243, 238, 230);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+    margin-left: auto;
+    margin-right: auto;
 }
