--- a/src/app/apli-detalle.component.html
+++ b/src/app/apli-detalle.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="apli">
     <h2>Información de {{apli.nombre}}!</h2>
-    <label>nombre: </label>
+    <label>Nombre: </label>
     <input [(ngModel)]="apli.nombre" placeholder="nombre de la apli">
 </div>
 <style>
