--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,3 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
 .selected{
     background-color: #CFD8DC !important;
     color: white;
@@ -18,14 +14,11 @@
     left: 0;
     background-color: #EEE;
     margin: .5em;
-    padding: .3em 0;
-    height: 1.6em;
+    padding:    .3em 0;
+    height: 1.7em;
     border-radius: 4px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-    /*list-style: none;
-    width: 150px;
-    display: inline;*/
-
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
 .aplis li.selected:hover {
     background-color: #BBD8DC !important;
@@ -57,13 +50,14 @@
 
 h1{
     background-color: rgb(15, 15, 15);
-    height: 70px;;
-    margin-top: -8px;
-    text-align: center;
-    padding-top: 20px;
-    color: rgb(243, 238, 230);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 40px;
+    height: 70px;
+    margin-top: auto;      
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+    padding-top: 20px;
+    text-justify: inherit;
+    color: rgb(253, 253, 252);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 40px;
 }
